# financial-rag

./: Dockerfile  Dockerfile.streamlit  README.md  config.py  docker-compose.yml  main.py  models.py  pyproject.toml
app/: config.py
app/db/: init.sql
app/routers/: __init__.py  documents.py  ingest.py  query.py
app/services/: __init__.py  chunker.py  embedder.py  llm.py  vector_store.py
financial_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
k8s/: api.yaml  configmap.yaml  namespace.yaml  postgres.yaml  secret.yaml  streamlit.yaml
streamlit/: app.py
